added database models

--- a/PANDA/PANDA.Web/Views/Shared/_Layout.cshtml
+++ b/PANDA/PANDA.Web/Views/Shared/_Layout.cshtml
@@ -47,9 +47,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="text-center border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - PANDA.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - PANDA - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
