--- a/PANDA/PANDA.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/PANDA/PANDA.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using PANDA.Web.Areas.Identity
-@using Microsoft.AspNetCore.Identity
-@namespace PANDA.Web.Areas.Identity.Pages
+@using Panda.Web.Areas.Identity
+@using Panda.Models
+@namespace Panda.Web.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
