--- a/PANDA/PANDA.Web/Views/_ViewImports.cshtml
+++ b/PANDA/PANDA.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using PANDA.Web
-@using PANDA.Web.ViewModels
+﻿@using Panda.Web
+@using Panda.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
