--- a/Eventures/Eventures.Web/Views/Home/Index.cshtml
+++ b/Eventures/Eventures.Web/Views/Home/Index.cshtml
@@ -2,3 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div class="jumbotron bg-eventures w-75 mx-auto">
+    <h1>Eventures - The best ticket service in the world.</h1>
+    <hr class="hr-2 bg-dark" />
+    <h3 class="mt-4"><a href="/Identity/Account/Login">Login</a> to start "eventing"</h3>
+    <h3 class="mt-4"><a href="/Identity/Account/Register">Register</a> if you do not have an account</h3>
+</div>
