Updated solution. Renames and validations

--- a/Eventures/Eventures.Web/Views/Event/All.cshtml
+++ b/Eventures/Eventures.Web/Views/Event/All.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Eventures.Web.ViewModels.EventAllViewModel>
+﻿@model List<Eventures.Web.ViewModels.Events.EventViewModel>
 
 @{
     ViewData["Title"] = "All";
