--- a/Eventures/Eventures.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Eventures/Eventures.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -58,10 +58,10 @@
     </div>
     <div class="form-group w-50">
         <div class="d-flex justify-content-center">
-            <label asp-for="Input.Ucn" class="font-weight-bold"></label>
+            <label asp-for="Input.UCN" class="font-weight-bold"></label>
         </div>
-        <input asp-for="Input.Ucn" class="form-control" type="datetime" placeholder="UCN..." />
-        <span asp-validation-for="Input.Ucn" class="text-danger"></span>
+        <input asp-for="Input.UCN" class="form-control" type="datetime" placeholder="UCN..." />
+        <span asp-validation-for="Input.UCN" class="text-danger"></span>
     </div>
     <hr class="mt-3 bg-eventures hr-2" />
 <div class="d-flex justify-content-center">
