--- a/Eventures/Eventures.Web/Views/Home/Index.cshtml
+++ b/Eventures/Eventures.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Eventures.Common
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -13,7 +14,7 @@
 }
 else
 {
-    @if (this.User.IsInRole("Admin"))
+    @if (this.User.IsInRole(GlobalConstants.ADMIN_ROLE))
     {
         <div class="jumbotron bg-eventures w-75 mx-auto">
             <h1 class="text-center">Welcome, Administrator - @this.User.Identity.Name </h1>
