--- a/Stopify/Web/Stopify.Web/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Stopify/Web/Stopify.Web/Areas/Identity/Pages/Account/Logout.cshtml
@@ -4,7 +4,5 @@
     ViewData["Title"] = "Log out";
 }
 
-<header>
-    <h1>@ViewData["Title"]</h1>
-    <p>You have successfully logged out of the application.</p>
-</header>
+<h1 class="text-center">You should not be able to see this!</h1>
+<h2 class="text-center">If you do, contact your administrator, as you are in grave danger.</h2>
