--- a/Stopify/Web/Stopify.Web/Areas/Administration/Views/Product/Type/Create.cshtml
+++ b/Stopify/Web/Stopify.Web/Areas/Administration/Views/Product/Type/Create.cshtml
@@ -1,33 +1,25 @@
 ﻿@model Stopify.Web.InputModels.ProductTypeCreateInputModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>ProductTypeCreateInputModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<h1 class="bg-primary text-white font-weight-bold text-center p-3 w-30 mx-auto rounded">Create Product Type</h1>
+<form method="post" action="/Administration/Product/Type/Create" class="form border-primary-4 rounded p-3 w-30 mx-auto mt-3">
+    <div class="form-group mx-auto">
+        <div class="d-flex justify-content-center">
+            <label asp-for="Name" class="text-primary h5">Name</label>
+        </div>
+        <input type="text" class="form-control text-primary text-center" id="name" placeholder="Name..."
+               asp-for="Name">
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <hr class="hr-2 bg-primary mt-4">
+    <div class="d-flex justify-content-center mt-3">
+        <button class="btn btn-primary font-weight-bold">Create Product Type</button>
+    </div>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
