--- a/Stopify/Web/Stopify.Web/Areas/Administration/Views/Product/Create.cshtml
+++ b/Stopify/Web/Stopify.Web/Areas/Administration/Views/Product/Create.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h1 class="bg-primary text-white font-weight-bold text-center p-3 w-60 mx-auto rounded">Create Product</h1>
-<form method="post" class="form border-primary-4 rounded p-3 w-60 mx-auto mt-3">
+<form method="post" class="form border-primary-4 rounded p-3 w-60 mx-auto mt-3" enctype="multipart/form-data">
     <div id="name-and-price-holder" class="d-flex justify-content-between">
         <div class="form-group mx-auto w-45">
             <div class="d-flex justify-content-center">
@@ -18,6 +18,7 @@
                    id="name"
                    placeholder="Name..."
                    asp-for="Name">
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group mx-auto w-45">
             <div class="d-flex justify-content-center">
@@ -29,6 +30,7 @@
                    id="price"
                    placeholder="Price..."
                    asp-for="Price">
+            <span asp-validation-for="Price" class="text-danger"></span>
         </div>
     </div>
     <div id="date-and-picture-holder" class="d-flex justify-content-between">
@@ -41,6 +43,8 @@
                    id="manufacturedOn"
                    placeholder="Manufactured On..."
                    asp-for="ManufacturedOn">
+            <span asp-validation-for="ManufacturedOn" class="text-danger"></span>
+
         </div>
         <div class="form-group mx-auto w-45">
             <div class="d-flex justify-content-center">
@@ -65,6 +69,7 @@
                 <option value="@type.Name">@type.Name</option>
             }
         </select>
+        <span asp-validation-for="ProductType" class="text-danger"></span>
     </div>
     <hr class="hr-2 bg-primary mt-4">
     <div class="d-flex justify-content-center mt-3">
