--- a/Stopify/Web/Stopify.Web/Views/Home/Index.cshtml
+++ b/Stopify/Web/Stopify.Web/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
-<div class="jumbotron bg-primary mt-3 mb-3">
-    <h1 class="font-weight-bold text-white">Stopify Web Shop</h1>
-    <hr class="bg-white hr-2" />
-    <h3 class="text-white">Have a nice shopping experience!</h3>
-</div>
+@if (!this.User.Identity.IsAuthenticated)
+{
+    <div class="jumbotron bg-primary mt-3 mb-3">
+        <h1 class="font-weight-bold text-white">Stopify Web Shop</h1>
+        <hr class="bg-white hr-2" />
+        <h3 class="text-white">Have a nice shopping experience!</h3>
+    </div>
+}
